<resources>
    <string name="app_name">ExpenseManager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="welcome_back">"Welcome back "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >= 4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_bar_title">Expense Manager</string>
    <string name="expense_name">Expense Name</string>
    <string name="submit">Submit</string>
    <string name="expense_deleted">Expense "%s" deleted</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="expense_type">Expense type</string>
    <string name="expense_priority">Priority</string>
    <string name="expense_inserted_date">Inserted date</string>
    <string name="amount">Amount</string>
    <string name="item_amount">"%s" PLN</string>

    <string name="menu_statistics">Statistics</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_name_label">Name</string>
    <string name="sort_type_label">Type</string>
    <string name="expense_amount_label">Amount</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="date">Date</string>
    <string name="reminder_date">Reminder date</string>
    <string name="search">Search</string>
    <string name="priority">Priority:</string>
    <string name="add_attachment">Add attachment</string>
</resources>