<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sort_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RadioGroup
            android:id="@+id/sort_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints" >

            <TextView
                android:text="@string/expense_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/descending_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/ascending_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />

            <TextView
                android:text="@string/expense_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/descending_amount_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/ascending_amount_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />

            <TextView
                android:text="@string/expense_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/descending_type_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/ascending_type_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />

            <TextView
                android:text="@string/expense_inserted_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/descending_inserted_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/ascending_inserted_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />


        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>